<resources>
    <string name="app_name">Translator</string>
    <string name="word_to_translate">Word to translate…</string>
    <string name="learn_translation">Translate the word…</string>
    <string name="click_to_add_a_word">Click \'+\' to add a word</string>
    <string name="translate_name">Translate</string>
    <string name="learn">%d words to learn</string>
    <string name="learn_name">Learn</string>
    <string name="wordlist_name">Wordlist</string>
    <string name="learnlist_name">Learnlist</string>
    <string name="explanation">Explanation</string>
    <string name="translate_to_russian">Translate %s to Russian</string>
    <string name="translate_to_english">Translate %s to English</string>
    <string name="type_by_audio">Type by audio</string>
    <string name="undefined">Undefined</string>
</resources>